--- a/productos/gokussj1.html
+++ b/productos/gokussj1.html
@@ -6,7 +6,19 @@
     <title>P&Paint</title>
 </head>
 <body>
-    <main>
+
+    <header class="navbar_container" style="background-color: rgb(185, 185, 253);">    
+        <div class="navbar">
+            <ul>
+                <li> P&Paint </li>
+                <li> <a href="../index.html"> INICIO </a></li>
+                <li> <a href="https://wa.me/543413076880" target="_blank"> <img src="../landingpage/img/iconos/wsp.svg"> </a> </li>
+            </ul>
+        </div>
+    </header>
+
+
+    <main style="background-color: rgb(247, 143, 143);">
         <!-- ACA PONER BIEN PIOLA UNA GALERIA 
         DESDE INICIO A FIN DE LO QUE PINTE-->
         <section class="sectionContainer" id="lista-productos">
@@ -28,7 +40,7 @@
                         <img src="../landingpage/img/gokussj1/3gokussjSF.png" width="100px" class="otraFoto">
                     </div>
                     <div class="foto">
-                        <img src="../landingpage/img/gokussj1/4gokussj1dibujo.jpeg" width="100px" class="otraFoto">
+                        <img src="../landingpage/img/gokussj1/4gokussj1dibujo.png" width="100px" class="otraFoto">
                     </div>
                 </div>
             </div>
@@ -61,16 +73,6 @@
         </section> 
         
     </main>
-
-    <footer>
-        <div class="wsp-container"> 
-            <div class="wsp-fondo">
-                <div class="wsp-content"> 
-                    <a href="https://wa.me/543413076880" target="_blank" class="texto-wsp"><img src="../landingpage/img/iconos/wsp.svg" width="110px"></a>
-                </div>  
-            </div>    
-        </div>
-    </footer>
     
 </body>
 </html>
