--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
 </head>
 <body>
     <header>
-        <div class="titulo">
-            <h1>Print & Paint</h1>
+
+        <div class="header_container">
+            <div class="titulo_container">
+                <h1 class="titulo">Print & Paint</h1>
+            </div>
+
+            <div class="texto-imagen_container">
+                <div class="texto">
+                    FIGURAS UNICAS, PINTADAS A MANO
+                </div>
+                <div class="imagen">
+                    <img src="landingpage/img/todos/1todos.jpeg" alt="" width="500px">
+                </div>
+            </div>
         </div>
+    
     </header>
     
     <main>
         <div> 
-            <h3>Productos</h3>
+            <h3> MI ARTE </h3>
         </div>
 
         <div class="container"> 
