--- a/productos/frieza.html
+++ b/productos/frieza.html
@@ -6,6 +6,17 @@
     <title>P&Paint</title>
 </head>
 <body>
+
+    <header class="navbar_container" style="background-color: rgb(185, 185, 253);">    
+        <div class="navbar">
+            <ul>
+                <li> P&Paint </li>
+                <li> <a href="../index.html"> INICIO </a></li>
+                <li> <a href="https://wa.me/543413076880" target="_blank"> <img src="../landingpage/img/iconos/wsp.svg"> </a> </li>
+            </ul>
+        </div>
+    </header>
+
     <main>
         <!-- ACA PONER BIEN PIOLA UNA GALERIA 
         DESDE INICIO A FIN DE LO QUE PINTE-->
@@ -65,15 +76,6 @@
         
     </main>
 
-    <footer>
-        <div class="wsp-container"> 
-            <div class="wsp-fondo">
-                <div class="wsp-content"> 
-                    <a href="https://wa.me/543413076880" target="_blank" class="texto-wsp"><img src="../landingpage/img/iconos/wsp.svg" width="110px"></a>
-                </div>  
-            </div>    
-        </div>
-    </footer>
     
 </body>
 </html>
