--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="landingpage/css/estilos.css"> 
     <title>P&Paint</title>
 </head>
 <body>
     <header>
-
         <div class="header_container">
             <div class="titulo_container">
-                <h1 class="titulo">Print & Paint</h1>
+                <h1 class="titulo">Print <br>& <br>Paint</h1>
             </div>
 
             <div class="texto-imagen_container">
+                <div class="imagen">
+                    <img src="landingpage/img/todos/1todosSF.png" alt="" width="500px">
+                </div>
                 <div class="texto">
                     FIGURAS UNICAS, PINTADAS A MANO
                 </div>
-                <div class="imagen">
-                    <img src="landingpage/img/todos/1todos.jpeg" alt="" width="500px">
-                </div>
+                
             </div>
         </div>
     
