termine el diseño web del inicio

--- a/productos/gokussj1.html
+++ b/productos/gokussj1.html
@@ -37,10 +37,13 @@
                         <img src="../landingpage/img/gokussj1/3gokussjSF.png" width="100px"  class="otraFoto">
                     </div>
                     <div class="foto">
-                        <img src="../landingpage/img/gokussj1/3gokussjSF.png" width="100px" class="otraFoto">
+                        <img src="../landingpage/img/gokussj1/4gokussjSF.png" width="100px" class="otraFoto">
                     </div>
                     <div class="foto">
-                        <img src="../landingpage/img/gokussj1/4gokussj1dibujoSF.png" width="100px" class="otraFoto">
+                        <img src="../landingpage/img/gokussj1/5gokussjSF.png" width="100px" class="otraFoto">
+                    </div>
+                    <div class="foto">
+                        <img src="../landingpage/img/gokussj1/6gokussjdibujoSF.png" width="100px" class="otraFoto">
                     </div>
                 </div>
             </div>
