cambie unas cosas nd mas

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h5> Goku ssj1 namek</h5>
                 </div>
                 <div class="botones">
-                    <button class="cta" onclick="window.location.href='productos/gokussj1.html'">
+                    <button class="cta" onclick="window.location.href='figuras/gokussj1.html'">
                         <span>Ver mas fotos</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
@@ -58,7 +58,7 @@
                     <h5> Kid Buu </h5>
                 </div>
                 <div class="botones">
-                    <button class="cta" onclick="window.location.href='productos/kidbuu.html'">
+                    <button class="cta" onclick="window.location.href='figuras/kidbuu.html'">
                         <span>Ver mas fotos</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
@@ -76,7 +76,7 @@
                     <h5 style="font-size: 20px !important;"> Frieza Final Form NAMEK </h5>
                 </div>
                 <div class="botones">
-                    <button class="cta" onclick="window.location.href='productos/frieza.html'">
+                    <button class="cta" onclick="window.location.href='figuras/frieza.html'">
                         <span>Ver mas fotos</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
@@ -94,7 +94,7 @@
                     <h5> Majin Buu gordo </h5>
                 </div>
                 <div class="botones">
-                    <button class="cta" onclick="window.location.href='productos/fatbuu.html'">
+                    <button class="cta" onclick="window.location.href='figuras/fatbuu.html'">
                         <span>Ver mas fotos</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
@@ -112,7 +112,7 @@
                     <h5> Broly vs Goku - 1er pelea </h5>
                 </div>
                 <div class="botones">
-                    <button class="cta" onclick="window.location.href='productos/brolygoku.html'">
+                    <button class="cta" onclick="window.location.href='figuras/brolygoku.html'">
                         <span>Ver mas fotos</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
