termine el inicio, me fatla terminar la parte de responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <div class="header_container">
             <div class="titulo_container">
-                <h1 class="titulo">Print <br>& <br>Paint</h1>
+                <h1 class="titulo">Print & Paint</h1>
             </div>
 
             <div class="texto-imagen_container">
@@ -26,7 +26,7 @@
     </header>
     
     <main>
-        <div class="signoBajar"> 
+        <div class="signoBajar" id="signoBajar"> 
             <img src="landingpage/img/iconos/downarrow_121316.svg" alt="">
         </div>
 
@@ -136,5 +136,7 @@
             </div>    
         </div>
     </footer>
+
+    <script src="landingpage/js/script.js"></script>
 </body>
 </html>
