unas mejoras al css de figura

--- a/figuras/gokussj1.html
+++ b/figuras/gokussj1.html
@@ -12,7 +12,7 @@
         <div class="navbar">
             <ul>
                 <li> <h2 onclick="window.location.href='../index.html'"">Print & Paint</h2></li>
-                <li> <a href="../index.html" class="inicio"> INICIO </a></li>
+                <li> <a href="../index.html" class="inicio">VOLVER AL INICIO</a></li>
                 <li> <a href="https://wa.me/543413076880" target="_blank"> <img src="../landingpage/img/iconos/wsp2.svg" width="50px" class="wsp"> </a> </li>
             </ul>
         </div>
@@ -22,6 +22,7 @@
     <main>
         <!-- ACA PONER BIEN PIOLA UNA GALERIA 
         DESDE INICIO A FIN DE LO QUE PINTE-->
+        <h3 class="tituloArriba"> GOKU SSJ 1 - Namek </h3>
 
         <section class="sectionContainer">
 
