funcionalidad de enviar wsp, animacion cambiar de fotos, estilos generales

--- a/figuras/brolygoku.html
+++ b/figuras/brolygoku.html
@@ -24,7 +24,7 @@
         <section class="sectionContainer">
 
             <div class="textoContainer">
-                <h3> BROLY vs GOKU - OG version </h3>
+                <h3 id="nombreFigura"> BROLY vs GOKU - OG version </h3>
 
                 <div class="especTec">
                     <h5> Especificaciones </h5>
@@ -41,7 +41,7 @@
                 </div>
                                 
                 <div class="botones productobrolygoku">
-                    <button class="cta" >
+                    <button class="cta" id="btnWsp">
                         <span>Pedir cotización</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
