--- a/figuras/fatbuu.html
+++ b/figuras/fatbuu.html
@@ -24,7 +24,7 @@
         <section class="sectionContainer" id="lista-productos">
 
             <div class="textoContainer">
-                <h3> MAJIN BUU  </h3>
+                <h3 id="nombreFigura"> MAJIN BUU  </h3>
                 
 
                 <div class="especTec">
@@ -41,7 +41,7 @@
 
                                 
                 <div class="botones productokidbuu">
-                    <button class="cta" >
+                    <button class="cta" id="btnWsp">
                         <span>Pedir cotización</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
