--- a/figuras/gokussj1.html
+++ b/figuras/gokussj1.html
@@ -25,7 +25,7 @@
         <section class="sectionContainer">
 
             <div class="textoContainer">
-                <h3> GOKU SSJ 1 - Namek </h3>
+                <h3 id="nombreFigura"> GOKU SSJ 1 - Namek </h3>
 
                 <div class="especTec">
                     <h4> Especificaciones </h4>
@@ -39,7 +39,7 @@
                 </div>
                 
                 <div class="botones productogoku">
-                    <button class="cta" >
+                    <button class="cta" id="btnWsp">
                         <span>Pedir cotización</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
