--- a/figuras/frieza.html
+++ b/figuras/frieza.html
@@ -25,7 +25,7 @@
         <section class="sectionContainer">
 
             <div class="textoContainer">
-                <h3> FRIEZA FULL POWER - Namek </h3>
+                <h3 id="nombreFigura"> FRIEZA FULL POWER - Namek </h3>
                 
 
                 <div class="especTec">
@@ -40,7 +40,7 @@
                 </div>
                               
                 <div class="botones productofrieza">
-                    <button class="cta" >
+                    <button class="cta" id="btnWsp">
                         <span>Pedir cotización</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
