--- a/figuras/kidbuu.html
+++ b/figuras/kidbuu.html
@@ -25,7 +25,7 @@
         <section class="sectionContainer">
 
             <div class="textoContainer">
-                <h3> KID BUU </h3>
+                <h3 id="nombreFigura"> KID BUU </h3>
                 
 
                 <div class="especTec">
@@ -42,7 +42,7 @@
 
                                 
                 <div class="botones productokidbuu">
-                    <button class="cta" >
+                    <button class="cta" id="btnWsp">
                         <span>Pedir cotización</span>
                         <svg viewBox="0 0 13 10" height="10px" width="15px">
                           <path d="M1,5 L11,5"></path>
