LISTO el responsive del inicio

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <img src="landingpage/img/frieza/2friezaSF.png" alt="" width="300px" class="fotofrieza">
                 </div>
                 <div class="producto-txt">
-                    <h5 style="font-size: 20px !important;"> Frieza Final Form NAMEK </h5>
+                    <h5> Frieza Full power NAMEK </h5>
                 </div>
                 <div class="botones">
                     <button class="cta" onclick="window.location.href='figuras/frieza.html'">
@@ -91,7 +91,7 @@
                     <img src="landingpage/img/fatbuu/2buufatSF.png" alt="" width="300px" class="fotofatbuu">
                 </div>
                 <div class="producto-txt">
-                    <h5> Majin Buu gordo </h5>
+                    <h5> Majin Buu </h5>
                 </div>
                 <div class="botones">
                     <button class="cta" onclick="window.location.href='figuras/fatbuu.html'">
@@ -109,7 +109,7 @@
                     <img src="landingpage/img/broly/6broly-gokuSF.png" alt="" width="300px" class="fotobrolygoku">
                 </div>
                 <div class="producto-txt">
-                    <h5> Broly vs Goku - 1er pelea </h5>
+                    <h5> Broly vs Goku - OG version </h5>
                 </div>
                 <div class="botones">
                     <button class="cta" onclick="window.location.href='figuras/brolygoku.html'">
