termine responsive de todo

--- a/figuras/brolygoku.html
+++ b/figuras/brolygoku.html
@@ -58,7 +58,7 @@
             <div class="fotoContainer fotosbrolygoku">
                 
                 <div class="fotoPrincipal">
-                    <img src="../landingpage/img/broly/2broly-gokuSF.png" width="500px" height="500px" id="fotoPrincipal">
+                    <img src="../landingpage/img/broly/2broly-gokuSF.png" width="500px" height="500px" id="fotoPrincipal"><a href="#" class="cerrarZoom" id="cerrarZoom">X</a>
                 </div>
 
                 <div class="otrasFotos">
