--- a/figuras/fatbuu.html
+++ b/figuras/fatbuu.html
@@ -58,7 +58,7 @@
             <div class="fotoContainer fotoskidbuu fotosfatbuu">
                 
                 <div class="fotoPrincipal">
-                    <img src="../landingpage/img/fatbuu/2buufatSF.png" width="500px" id="fotoPrincipal">
+                    <img src="../landingpage/img/fatbuu/2buufatSF.png" width="500px" id="fotoPrincipal"><a href="#" class="cerrarZoom" id="cerrarZoom">X</a>
                 </div>
 
                 <div class="otrasFotos">
