--- a/figuras/frieza.html
+++ b/figuras/frieza.html
@@ -57,7 +57,7 @@
             <div class="fotoContainer fotosfrieza">
                 
                 <div class="fotoPrincipal">
-                    <img src="../landingpage/img/frieza/2friezaSF.png" width="500px" id="fotoPrincipal">
+                    <img src="../landingpage/img/frieza/2friezaSF.png" width="500px" id="fotoPrincipal"><a href="#" class="cerrarZoom" id="cerrarZoom">X</a>
                 </div>
 
                 <div class="otrasFotos">
