--- a/figuras/gokussj1.html
+++ b/figuras/gokussj1.html
@@ -54,26 +54,26 @@
             </div>
 
             <div class="fotoContainer fotosgoku">
-                
+            
                 <div class="fotoPrincipal">
-                    <img src="../landingpage/img/gokussj1/2gokussjSF.png" width="500px" id="fotoPrincipal">
-                </div>
+                    <img src="../landingpage/img/gokussj1/2gokussjSF.png" width="500px" id="fotoPrincipal"><a href="#" class="cerrarZoom" id="cerrarZoom">X</a>
+                </div>        
 
                 <div class="otrasFotos">
                     <div class="foto">
-                        <img src="../landingpage/img/gokussj1/1gokussjSF.png" width="100px" class="otraFoto base" >
+                        <img src="../landingpage/img/gokussj1/1gokussjSF.png" width="100px" class="otraFoto base" name="1goku">
                     </div>
                     <div class="foto">
-                        <img src="../landingpage/img/gokussj1/3gokussjSF.png" width="100px"  class="otraFoto">
+                        <img src="../landingpage/img/gokussj1/3gokussjSF.png" width="100px"  class="otraFoto" name="3goku">
                     </div>
                     <div class="foto">
-                        <img src="../landingpage/img/gokussj1/4gokussjSF.png" width="100px" class="otraFoto">
+                        <img src="../landingpage/img/gokussj1/4gokussjSF.png" width="100px" class="otraFoto" name="4goku">
                     </div>
                     <div class="foto">
-                        <img src="../landingpage/img/gokussj1/5gokussjSF.png" width="100px" class="otraFoto">
+                        <img src="../landingpage/img/gokussj1/5gokussjSF.png" width="100px" class="otraFoto" name="5goku">
                     </div>
                     <div class="foto">
-                        <img src="../landingpage/img/gokussj1/2gokussjSF.png" width="100px" class="otraFoto">
+                        <img src="../landingpage/img/gokussj1/2gokussjSF.png" width="100px" class="otraFoto" name="6goku">
                     </div>
                 </div>
             </div>
