--- a/figuras/kidbuu.html
+++ b/figuras/kidbuu.html
@@ -58,7 +58,7 @@
             <div class="fotoContainer fotoskidbuu">
                 
                 <div class="fotoPrincipal">
-                    <img src="../landingpage/img/kidbuu/3kidbuuSF.png" width="500px" id="fotoPrincipal">
+                    <img src="../landingpage/img/kidbuu/3kidbuuSF.png" width="500px" id="fotoPrincipal" ><a href="#" class="cerrarZoom" id="cerrarZoom">X</a>
                 </div>
 
                 <div class="otrasFotos">
@@ -66,7 +66,7 @@
                         <img src="../landingpage/img/kidbuu/1kidbuuSF.png" width="100px" height="100px" class="otraFoto">
                     </div>
                     <div class="foto">
-                        <img src="../landingpage/img/kidbuu/4kidbuuSF.png" width="100px" height="100px"  class="otraFoto">
+                        <img src="../landingpage/img/kidbuu/4kidbuuSF.png" width="100px" height="100px"  class="otraFoto agrandarkidbuu">
                     </div>
                     <div class="foto">
                         <img src="../landingpage/img/kidbuu/2kidbuuSF.png" width="100px" height="100px"  class="otraFoto">
