--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="landingpage/css/estilos.css"> 
+    <link rel="stylesheet" href="landingpage/css/estilos.css">
+    <link rel="icon" href="landingpage/img/iconos/icono2.jpg"> 
     <title>P&Paint</title>
 </head>
 <body>
